<resources>
    <string name="app_name">Cardholder</string>
    <string name="terms_and_policy">Terms and Policy</string>
    <string name="card_action_dialog_default_title">Choose action with card \"%s\"</string>
    <string name="card_action_dialog_delete_button_text">Delete card</string>
    <string name="card_action_dialog_pin_card_button_text">Pin card</string>
    <string name="card_action_dialog_unpin_card_button_text">Unpin card</string>
    <string name="card_backup_dialog_default_title">Import or export cards</string>
    <string name="card_backup_dialog_export_button_text">Export cards to file</string>
    <string name="card_backup_dialog_export_completed_message">Export completed successfully</string>
    <string name="card_backup_dialog_export_progress_title">Please wait. Export in progress</string>
    <string name="card_backup_dialog_import_button_text">Import cards from a file</string>
    <string name="card_backup_dialog_import_completed_message">Import completed successfully</string>
    <string name="card_backup_dialog_import_progress_title">Please wait. Import in progress</string>
    <string name="card_backup_dialog_import_title">Import cards</string>
    <string name="card_backup_dialog_label">Backup</string>
    <string name="card_backup_dialog_operation_canceled_message">Operation canceled</string>
    <string name="card_backup_dialog_sync_cards_button_text">Sync cards with the cloud</string>
    <string name="card_comment_hint">Comment</string>
    <string name="card_comment_title">Editing card comment</string>
    <string name="card_content_empty_text_error_message">Empty text</string>
    <string name="card_content_hint">Text</string>
    <string name="card_content_label">Card content</string>
    <string name="card_content_title">Editing card text</string>
    <string name="card_crop_label">Crop image</string>
    <string name="card_crop_fab_title">Crop</string>
    <string name="card_display_delete_menu_button_text">Delete</string>
    <string name="card_display_edit_fab_title">Edit</string>
    <string name="card_display_explanation_message">Tap on the barcode to display it on the full screen with maximum brightness</string>
    <string name="card_display_label">Card display</string>
    <string name="card_display_no_category">No category</string>
    <string name="card_display_share_menu_button_text">Share</string>
    <string name="card_edit_barcode_format_hint">Format</string>
    <string name="card_edit_category_hint">Category</string>
    <string name="card_edit_color_hint">Color</string>
    <string name="card_edit_comment_hint">Comment</string>
    <string name="card_edit_content_hint">Text</string>
    <string name="card_edit_invalid_image_link_error_message">Invalid image link!</string>
    <string name="card_edit_invalid_value_error_message">The value is invalid for the selected barcode type</string>
    <string name="card_edit_label">Edit</string>
    <string name="card_edit_logo_helper_text">You can paste the link to the image or just enter the website address here ☝</string>
    <string name="card_edit_logo_hint">Logo</string>
    <string name="card_edit_name_hint">Name</string>
    <string name="card_edit_no_connection_error_message">Internet connection required!</string>
    <string name="card_edit_scan_icon_content_description">Scan barcode</string>
    <string name="card_list_label">Cards</string>
    <string name="card_list_no_cards_message">No scanned cards</string>
    <string name="card_list_import_fab_title">Import cards</string>
    <string name="card_logo_explanation_text">You can paste a logo link or enter a website address, such as https://example.com, into the text field. Entering a website address will extract the website\'s icon. The extracted icon may not be the best resolution or may be missing, so it\'s best to use a direct link to the logo.</string>
    <string name="card_logo_link_to_image_hint">Image link</string>
    <string name="card_logo_link_to_website_hint">Website link</string>
    <string name="card_logo_fab_title">Got it</string>
    <string name="card_logo_toolbar_title">Downloading logos</string>
    <string name="card_search_add_categories_header_text">Add categories</string>
    <string name="card_search_in_all_categories_hint">Search in all categories</string>
    <string name="card_search_label">Search cards</string>
    <string name="card_search_nothing_found_message">Nothing found</string>
    <string name="card_search_within_category_hint">Search within \"%s\"</string>
    <string name="card_scan_add_manually_fab_title">Add manually</string>
    <string name="card_scan_explanation_message">Scan a barcode to automatically add a new card</string>
    <string name="card_scan_label">Scan</string>
    <string name="card_scan_select_file_fab_title">Select file</string>
    <string name="card_zoom_label">Zoom</string>
    <string name="card_zoom_menu_button_text">Close</string>
    <string name="category_edit_category_name_hint">Name</string>
    <string name="category_edit_category_toolbar_title">Card category</string>
    <string name="category_edit_delete_menu_item_title">Delete category</string>
    <string name="category_edit_label">Card category</string>
    <string name="category_edit_name_is_empty_error_message">Name is empty</string>
    <string name="category_edit_name_is_forbidden_error_message">Name is forbidden</string>
    <string name="category_edit_name_is_long_error_message">Name length must not exceed %s characters</string>
    <string name="category_edit_new_category_toolbar_title">New category</string>
    <string name="category_list_add_category_fab_content_description">Add new card category</string>
    <string name="category_list_empty_list_message">No categories</string>
    <string name="category_list_label">Card categories</string>
    <string name="cloud_login_fab_text">Login</string>
    <string name="cloud_login_help_text">You can only select one cloud service to sync cards</string>
    <string name="cloud_login_toolbar_title">Select cloud for sync</string>
    <string name="cloud_logout_fab_text">Logout</string>
    <string name="cloud_logout_help_text">If you want to set up synchronization with another cloud service, you need to log out</string>
    <string name="cloud_logout_toolbar_title">Synchronization active</string>
    <string name="cloud_logout_confirmation_title_text">Log out of %s? Syncing cards with the cloud will be paused</string>
    <string name="cloud_logout_confirmation_button_text">Log out</string>
    <string name="coffee_dialog_label">Coffee</string>
    <string name="coffee_dialog_title">Support this app by buying coffee for developers</string>
    <string name="delete_card_dialog_button_text">Delete permanently</string>
    <string name="delete_card_dialog_label">Delete</string>
    <string name="delete_card_dialog_title">Delete? The card \"%s\" will be permanently deleted</string>
    <string name="info_dialog_copyright_button_text">Copyright</string>
    <string name="info_dialog_label">Info</string>
    <string name="info_dialog_policy_button_text">Privacy policy</string>
    <string name="info_dialog_source_code_button_text">Source code</string>
    <string name="info_dialog_supported_formats_button_text">Supported formats</string>
    <string name="payment_details_message_about_annual_sub_text">The annual subscription is active from %s. The next payment is %s.</string>
    <string name="payment_details_message_about_monthly_sub_text">The monthly subscription is active from %s. The next payment is %s.</string>
    <string name="payment_details_message_about_lifetime_sub_text" translatable="false">The lifetime subscription is active from %s.</string>
    <string name="payment_details_title">Subscription details</string>
    <string name="payment_error_unknown_error_message_text">Unknown error! Please try again later</string>
    <string name="payment_error_fab_text">Got it</string>
    <string name="payment_error_title">Something went wrong</string>
    <string name="payment_option_annual_title_text">Annual subscription\n%s per year</string>
    <string name="payment_option_lifetime_title_text" translatable="false">Lifetime subscription\n%s once and for all</string>
    <string name="payment_option_monthly_title_text">Monthly subscription\n%s per month</string>
    <string name="payment_options_fab_text">Subscribe now</string>
    <string name="payment_options_message_text">The subscription helps us develop the app and accelerates the implementation of new features</string>
    <string name="payment_options_toolbar_title">Subscription</string>
    <string name="permission_add_manually_button_text">Add new card manually</string>
    <string name="permission_grant_button_text">Grant</string>
    <string name="permission_label">Permission</string>
    <string name="permission_rationale_message_text">Please grant access to the device\'s camera. Camera access is required to scan your cards</string>
    <string name="permission_scan_barcode_file_button_text">Scan barcode from file</string>
    <string name="settings_about_app_item_title">About app</string>
    <string name="settings_app_theme_item_title">App theme</string>
    <string name="settings_card_categories_item_title">Card categories</string>
    <string name="settings_cloud_sync_switch_on_text">Cloud sync with %s</string>
    <string name="settings_cloud_sync_switch_off_text">Cloud sync</string>
    <string name="settings_cloud_sync_activation_message">Cloud sync enabled</string>
    <string name="settings_cloud_sync_deactivation_message">Cloud sync disabled</string>
    <string name="settings_coffee_item_title">Coffee for developers</string>
    <string name="settings_import_export_cards_item_title">Import or export cards</string>
    <string name="settings_label">Settings</string>
    <string name="settings_num_of_columns_item_title">Number of columns</string>
    <string name="settings_switch_to_dark_mode_button_text">Switch to dark mode</string>
    <string name="settings_switch_to_light_mode_button_text">Switch to light mode</string>
    <string name="settings_switch_to_multi_column_button_text">Switch to multi-column list of cards</string>
    <string name="settings_switch_to_single_column_button_text">Switch to single-column list of cards</string>
    <string name="snack_message_barcode_not_found">Barcode not found</string>
    <string name="shortcut_card_removed_message">Card removed</string>
    <string name="shortcut_create_label">Card shortcut</string>
    <string name="shortcut_create_title">Select a card</string>
    <string name="specs_barcode_length_text">Length: %s</string>
    <string name="specs_barcode_valid_characters_text">Valid characters: %s</string>
    <string name="specs_label">Specs</string>
    <string name="specs_toolbar_title">Supported formats</string>
    <string name="sync_success_toast_message">Synced</string>
    <string name="toast_gms_not_available_message">Google services are not available on this device</string>
</resources>