<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardholder_navigation"
    app:startDestination="@id/card_list_fragment">

    <fragment
        android:id="@+id/card_list_fragment"
        android:name="my.cardholder.ui.card.list.CardListFragment"
        android:label="@string/cards_title"
        tools:layout="@layout/fragment_card_list">
        <action
            android:id="@+id/from_card_list_to_card_display"
            app:destination="@id/card_display_fragment" />
        <action
            android:id="@+id/from_card_list_to_card_search"
            app:destination="@id/card_search_fragment" />
    </fragment>

    <fragment
        android:id="@+id/card_search_fragment"
        android:name="my.cardholder.ui.card.search.CardSearchFragment"
        android:label="@string/card_search_label"
        tools:layout="@layout/fragment_card_search">
        <action
            android:id="@+id/from_card_search_to_card_display"
            app:destination="@id/card_display_fragment"
            app:popUpTo="@id/card_list_fragment" />
    </fragment>

    <fragment
        android:id="@+id/card_display_fragment"
        android:name="my.cardholder.ui.card.display.CardDisplayFragment"
        android:label="@string/card_display_label"
        tools:layout="@layout/fragment_card_display">
        <argument
            android:name="card_id"
            app:argType="long" />
        <action
            android:id="@+id/from_card_display_to_card_edit"
            app:destination="@id/card_edit_fragment" />
        <action
            android:id="@+id/from_card_display_to_delete_card"
            app:destination="@id/delete_card_dialog" />
    </fragment>

    <fragment
        android:id="@+id/card_edit_fragment"
        android:name="my.cardholder.ui.card.edit.CardEditFragment"
        android:label="@string/card_edit_label"
        tools:layout="@layout/fragment_card_edit">
        <argument
            android:name="card_id"
            app:argType="long" />
    </fragment>

    <dialog
        android:id="@+id/delete_card_dialog"
        android:name="my.cardholder.ui.card.delete.DeleteCardDialog"
        android:label="@string/delete_card_dialog_label"
        tools:layout="@layout/dialog_delete_card">
        <argument
            android:name="card_id"
            app:argType="long" />
        <action
            android:id="@+id/from_delete_card_to_card_list"
            app:destination="@id/card_list_fragment"
            app:popUpTo="@id/cardholder_navigation" />
    </dialog>

</navigation>
