<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.card.list.CardListFragment">

    <TextView
        android:id="@+id/card_list_empty_list_message_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        tools:text="@string/card_list_no_cards_message" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/card_list_import_cards_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="32dp"
        android:text="@string/card_list_import_fab_title"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/card_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/cardholder_recycler_view_padding_horizontal"
        tools:itemCount="3"
        tools:listitem="@layout/item_card" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/card_list_search_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/card_search_label"
        android:src="@drawable/ic_search"
        android:transitionName="@string/transition_search"
        app:useCompatPadding="true" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/card_list_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/bg_gradient_transparent"
        android:elevation="0dp" />

</FrameLayout>
